typescript/checker/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement3.ts.stderr
error: TS1115
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/ContinueStatements/parser_continueNotInIterationStatement3.ts:3:5
  |
3 |     continue;
  |     ^^^^^^^^^

